# my-llm

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  STEP_BY_STEP.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
Codex/agents/: classroom-docs-printables-maintainer.md  packaging-install-readiness.md  qa-evaluation-engineer.md  school-demo-release-gatekeeper.md
data/: sample.txt
data/samples/: README.md  nature_notes.txt  pirate_dialogue.txt  robot_helper.txt  sci_fi_micro_story.txt  short_poems.txt  space_adventure.txt
docs/: architecture.md  code_snippet_style_guide.md  edition1_release_gate.md  first_lesson_walkthrough.md  how_llms_work.md  student_worksheet.md  teacher_guide.md  tech_i_can_kairo_book.md
src/: agents_dashboard.py  build_qa_corpus.py  chat.py  evaluate.py  generate.py  kairo_learn.py  qa.py  train.py
src/tiny_llm/: __init__.py  agents_dashboard.py  agents_runtime.py  attention.py  cli.py  data.py  evaluate.py  experiments.py  explain.py  generate.py  generation.py  kairo_learn.py  learn.py  model.py  orchestrator_log.py  paths.py  qa.py  qa_data.py  safety.py  train.py  training.py  utils.py
src/tiny_llm/samples/: README.md  nature_notes.txt  pirate_dialogue.txt  qa_space_facts.jsonl  robot_helper.txt  space_adventure.txt
tests/: test_agents_dashboard_ui.py  test_agents_runtime.py  test_attention.py  test_book_manuscript_quality.py  test_cli_smoke.py  test_dataset.py  test_docs_integrity.py  test_evaluate_smoke.py  test_experiments.py  test_explain.py  test_generate.py  test_generation.py  test_imports.py  test_learn.py  test_learn_helpers.py  test_model.py  test_orchestrator_log.py  test_packaging.py  test_paths.py  test_pdf_generation.py  test_qa_cli_smoke.py  test_qa_data.py  test_qa_helpers.py  test_safety.py  test_tech_i_can_book_generation.py  test_tokenizer.py  test_train_smoke.py  test_training_helpers.py  test_training_smoke.py
tools/pdf/: generate_printables.py  generate_tech_i_can_book.py  printable.css
