[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kairo-llm"
version = "0.1.0"
description = "Kairo: an educational byte-level GPT-style language model"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2.0",
  "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"


[project.optional-dependencies]
learn = [
  "streamlit>=1.35.0",
]
