[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kairo-llm"
version = "0.1.0"
description = "Kairo: an educational byte-level GPT lab for building, training, and understanding a tiny LLM."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2.0",
  "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tiny_llm = ["samples/*.txt", "samples/*.jsonl"]

[project.scripts]
kairo-train = "tiny_llm.cli:train"
kairo-generate = "tiny_llm.cli:generate"
kairo-evaluate = "tiny_llm.cli:evaluate"
kairo-chat = "tiny_llm.cli:chat"
kairo-qa = "tiny_llm.cli:qa"
kairo-build-qa-corpus = "tiny_llm.cli:build_qa_corpus"
kairo-agents-dashboard = "tiny_llm.cli:agents_dashboard"
kairo-learn = "tiny_llm.cli:learn"
kairo-orchestrator-log = "tiny_llm.cli:orchestrator_log"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"


[project.optional-dependencies]
learn = [
  "streamlit>=1.30",
]
pdf = [
  "reportlab>=4.0",
  "pillow>=10.0.0",
  "pypdf>=5.0.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "reportlab>=4.0",
  "pillow>=10.0.0",
  "pypdf>=5.0.0",
]
